    in man headers [lintian].
  * Removed empty man directories.
  * Fixed clean target to remove GMT symlink.
  * Fixed wrapping in debian/changelog [lintian]
  * Added copyright notice to debian/copyright [lintian]
  * Moved to libnetcdf-dev instead of old netcdfg-dev now obsolete.
  * Build-dep on c-shell removed, because not more required.
  * Long description revised.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Fri, 13 Jun 2008 21:01:30 +0200

gmt (4.2.1-1) unstable; urgency=low

  * New upstream release. There is no more a _man file, all manpages
    are in _src debian/rules changed as consequence This partially fixes
    #181557 but project.1 is still a bit weird.
  * Revised man page installation in debian/rules, due to changes in the
    building system.
  * In debian/rules: added LDFLAGS="-g" at build-time, in order to
    create unstripped binaries.
    (closes: #437047)
  * In debian/rules: added private libraries path to search for libs when
    calling dh_shlibdeps
  * Policy bumped to 3.7.3, without changes.
  * Added Vcs-* fields to debian/control.
  * Now installs some additional pdfs in gmt-doc-pdf.
  * GMT wrapper changed to modify PATH before calling a GMT command.
    Patch applied on fly in debian/rules.
    (closes: #416869)
  * Fixed patches and debian/rules to use quilt in top dir and support
    next generation source package.
    (closes: #485163)

 -- Francesco Paolo Lovergine <frankie@debian.org>  Thu, 12 Jun 2008 14:21:53 +0200

gmt (4.2.0-1) unstable; urgency=low

  [ Torsten Landschoff ]
  * New upstream release.
    (closes: #403838, #157744)
  * Hand over to Debian GIS team for group maintenance.

  [ Francesco Paolo Lovergine ]
  * Moved to policy 3.7.2, without changes
  * Debhelper level moved to 5
  * Added html/pdf browser suggestions.
  * Updated home page in copyright file.
  * Added home page ini debian/control descriptions.
    (closes: #416766)
  * Introduced Homepage field in debian/control.
